source reading fix